--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,6 @@
-html{
-    width: 375px;
-    margin: 0px 0px 0px 0px;
-}
-#top {
+.top {
     display: flex;
-    width: 375px;
+
     height: 65px;
     background: #FFFFFF;
     box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.16);
@@ -13,13 +9,13 @@ html{
 
 }
 
-#body {
-    max-width: 375px;
+.body {
+
     margin-left: 0px;
     margin-right: 0px;
     padding-left: 0px;
     padding-right: 0px;
-width: 375px;
+
 
 }
 
@@ -30,7 +26,7 @@ width: 375px;
 
 }
 
-#wholeBurger {
+.wholeBurger {
 
     margin: 19px 1px 10px 70px;
 }
@@ -63,18 +59,18 @@ width: 375px;
 
 }
 
-#topPhoto {
+.topPhoto {
     /* margin-bottom: 32px; */
     margin-top: 52px;
 }
 
 
 
-#aboutBlog {
+.aboutBlog {
     font-family: 'New York Extra Large', sans-serif;
     font-size: 34px;
-    width: 335px;
-    height:172px;
+
+    height: 172px;
     font-weight: 700;
     font-style: normal;
     line-height: 120%;
@@ -86,10 +82,10 @@ width: 375px;
 
 }
 
-#smallTextAboutBlog {
+.smallTextAboutBlog {
     font-family: 'SF Mono', sans-serif;
     font-size: 16px;
-    width: 335px;
+
     height: 81px;
     line-height: 25px;
     line-height: 150%;
@@ -101,14 +97,14 @@ width: 375px;
 
 }
 
-#lineOfFirstPage {
-    width: 375px;
+.lineOfFirstPage {
+
     height: 0px;
     border: 2px solid #000000;
     margin: 52px 0 0 0;
 }
 
-#articles {
+.articles {
     font-family: 'New York Extra Large', sans-serif;
     font-size: 32px;
     font-weight: 700;
@@ -128,9 +124,7 @@ width: 375px;
     margin: 42px 20px 0px 20px;
 }
 
-#firstPage{
-    width:375px;
-}
+
 .textAfterImages {
     margin: 20px 56px 0px 56px;
     font-family: 'SF Pro Display', sans-serif;
@@ -142,43 +136,104 @@ width: 375px;
     text-align: center;
     vertical-align: top;
     font-weight: 450;
-    
+
 }
-#OFFF{
-    width:262px;
-    height:78px;    
+
+.OFFF {
+    margin: 20px 56px 0px 56px;
+    font-family: 'SF Pro Display', sans-serif;
+    font-style: Medium;
+    fill: solid;
+    font-size: 22px;
+    line-height: 26px;
+    line-height: 120%;
+    text-align: center;
+    vertical-align: top;
+    font-weight: 450;
+    height: 78px;
 }
-#helloWorld{
-    width:262px;
-    height:52px;  
+
+.helloWorld {
+    margin: 20px 56px 0px 56px;
+    font-family: 'SF Pro Display', sans-serif;
+    font-style: Medium;
+    fill: solid;
+    font-size: 22px;
+    line-height: 26px;
+    line-height: 120%;
+    text-align: center;
+    vertical-align: top;
+    font-weight: 450;
+    height: 52px;
 }
-#regarding{
-    width:262px;
-    height:78px;   
+
+.regarding {
+    margin: 20px 56px 0px 56px;
+    font-family: 'SF Pro Display', sans-serif;
+    font-style: Medium;
+    fill: solid;
+    font-size: 22px;
+    line-height: 26px;
+    line-height: 120%;
+    text-align: center;
+    vertical-align: top;
+    font-weight: 450;
+    height: 78px;
 }
-#updatingList{
-    width:282px;
-    height:104px;   
+
+.updatingList {
+    margin: 20px 56px 0px 56px;
+    font-family: 'SF Pro Display', sans-serif;
+    font-style: Medium;
+    fill: solid;
+    font-size: 22px;
+    line-height: 26px;
+    line-height: 120%;
+    text-align: center;
+    vertical-align: top;
+    font-weight: 450;
+    height: 104px;
 }
-#fewWordd{
-    width:262px;
-    height:78px;   
+
+.fewWordd {
+    margin: 20px 56px 0px 56px;
+    font-family: 'SF Pro Display', sans-serif;
+    font-style: Medium;
+    fill: solid;
+    font-size: 22px;
+    line-height: 26px;
+    line-height: 120%;
+    text-align: center;
+    vertical-align: top;
+    font-weight: 450;
+    height: 78px;
 }
-#modern{
-    width:270px;
-    height:104px; 
+
+.modern {
+    margin: 20px 56px 0px 56px;
+    font-family: 'SF Pro Display', sans-serif;
+    font-style: Medium;
+    fill: solid;
+    font-size: 22px;
+    line-height: 26px;
+    line-height: 120%;
+    text-align: center;
+    vertical-align: top;
+    font-weight: 450;
+    height: 104px;
 }
-#blackSquare {
+
+.blackSquare {
     background-color: #000000;
     color: #FFFFFF;
     height: 456px;
     margin-top: 87px;
-    width: 375px;
+
     overflow: hidden;
     position: relative;
 }
 
-#squareFirstText {
+.squareFirstText {
     font-family: 'SF Pro Display', sans-serif;
     width: 1024px;
     display: flex;
@@ -189,26 +244,26 @@ width: 375px;
     font-size: 21px;
     white-space: nowrap;
     line-height: 28px;
-    transform: translateX(-30.3%);
+    transform: translateX(-29%);
 
 
 
 }
 
 
-#US {
+.US {
     font-weight: bold;
 }
 
-#DIGITAL {
+.DIGITAL {
     font-weight: bold;
 }
 
-#creativity {
+.creativity {
     font-weight: bold;
 }
 
-#suspense {
+.suspense {
     font-weight: bold;
 }
 
@@ -217,11 +272,11 @@ width: 375px;
 }
 
 
-#informationText {
+.informationText {
     text-align: center;
 }
 
-#bottomRose {
+.bottomRose {
     margin: 153px 65px 0px 65px;
     margin-top: 153px;
 
@@ -229,7 +284,7 @@ width: 375px;
 
 }
 
-#lorem {
+.lorem {
     font-family: 'New York Small';
     font-style: normal;
     font-size: 13px;
@@ -248,14 +303,14 @@ width: 375px;
     text-decoration-line: underline;
 }
 
-#links {
+.links {
     display: flex;
     justify-content: space-between;
     width: 181px;
     margin: 32px 97px 0px 97px;
 }
 
-#authors {
+.authors {
     width: 170px;
     height: 34px;
     font-family: 'SF Pro Display', sans-serif;
