--- a/styles.css
+++ b/styles.css
@@ -1,107 +1,155 @@
-* {
+/* Указываем box sizing */
+*,
+*::before,
+*::after {
     box-sizing: border-box;
-    margin: 0;
+}
+
+/* Убираем внутренние отступы */
+ul[class],
+ol[class] {
     padding: 0;
 }
 
-.top {
+/* Убираем внешние отступы */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+    margin: 0;
+}
+
+/* Выставляем основные настройки по-умолчанию для body */
+body {
+    min-height: 100vh;
+    scroll-behavior: smooth;
+    text-rendering: optimizeSpeed;
+    line-height: 1.5;
+}
+
+/* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
+ul[class],
+ol[class] {
+    list-style: none;
+}
+
+/* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
+a:not([class]) {
+    text-decoration-skip-ink: auto;
+}
+
+/* Упрощаем работу с изображениями */
+img {
+    max-width: 100%;
+    display: block;
+}
+
+/* Указываем понятную периодичность в потоке данных у article*/
+article>*+* {
+    margin-top: 1em;
+}
+
+/* Наследуем шрифты для инпутов и кнопок */
+input,
+button,
+textarea,
+select {
+    font: inherit;
+}
+
+/* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
+@media (prefers-reduced-motion: reduce) {
+    * {
+        animation-duration: 0.01ms !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0.01ms !important;
+        scroll-behavior: auto !important;
+    }
+}
+
+.header {
     display: flex;
-    height: 65px;
-    background: #FFFFFF;
+    justify-content: space-between;
     box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.16);
 }
 
-.top_photo {
-    margin-top: 52px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto
+.top_padding_nordic {
+    padding: 24px 0px 21px 20px;
 }
 
-.desktop_menu {
-    display: none;
+.top_padding_burger {
+    padding: 24px 24px;
+
 }
 
-.rose {
-    margin: 24px 0px 24px 20px;
+.top_section {
+    text-align: center;
+    padding-top: 52px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
 }
 
-.whole_burger {
-    margin: 19px 1px 10px 70px;
-}
-
-.top_part_of__the_burger {
-    width: 24px;
+.top_section::after {
+    content: "";
+    padding-top: 52px;
+    max-width: 640px;
     height: 0px;
-    top: 39.5px;
-    border: 1px solid #000000;
-    margin: 6px 0;
-}
-
-.middle_part_of__the_burger {
-    width: 24px;
-    height: 0px;
-    top: 34px;
-    border: 1px solid #000000;
-    margin: 6px 0;
-}
-
-.bottom_part_of__the_burger {
-    width: 24px;
-    height: 0px;
-    bottom: 20px;
-    margin: 6px 0;
-    border: 1px solid #000000;
+    width: 100%;
+    border-bottom: 2px solid black;
 }
 
 .about_blog {
     font-family: 'New York Extra Large', sans-serif;
     font-size: 34px;
-
-    height: 172px;
     font-weight: 700;
-    font-style: normal;
     line-height: 120%;
-    text-align: center;
-    margin: 32px 20px 0px 20px;
-    vertical-align: top;
+    padding: 32px 20px 0px 20px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 375px;
 }
+
+
+
 
 .small_text_about_blog {
-    font-family: 'SF Mono', sans-serif;
+    padding: 24px 20px 0px 20px;
+    font-family: 'SF Mono';
+    font-weight: 400;
     font-size: 16px;
-    height: 81px;
-    line-height: 150%;
-    text-align: center;
-    vertical-align: top;
-    margin: 24px 20px 0px 20px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-
-.line_of_first_page {
-    height: 0px;
-    border: 2px solid #000000;
-    margin: 52px 0 0 0;
-}
-
-.articles {
-    font-family: 'New York Extra Large', sans-serif;
-    font-size: 32px;
-    font-weight: 700;
-    text-align: center;
-    white-space: nowrap;
-    height: 36px;
-    line-height: 100%;
-    margin-top: 56px;
-    vertical-align: top;
-}
-
-.second_page_photos_first {
-    display: block;
-    margin-left: auto;
+    line-height: 170%;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-right: auto;
-    margin-top: 29px;
+    margin-left: auto;
+    max-width: 375px;
+}
 
+.section_with_photo {
+    text-align: center;
+    padding-top: 56px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.text_after_images {
+    font-family: 'SF Pro Display';
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 120%;
+    padding: 20px 56px 0px 56px;
 }
 
 .second_page_photos {
@@ -111,260 +159,83 @@
     margin-top: 42px;
 }
 
+.articles {
+    font-family: 'New York Extra Large';
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+    margin-bottom: -13px;
+}
 
-.text_after_images {
-    font-family: 'SF Pro Display', sans-serif;
-    font-style: normal;
-    font-size: 22px;
-    line-height: 120%;
+.footer_black_square {
+    background: black;
+    color: white;
     text-align: center;
-    vertical-align: top;
-    font-weight: 450;
-    margin: 20px 56px 0px 56px;
-}
-
-.text_after_images_78 {
-    font-family: 'SF Pro Display', sans-serif;
-    font-style: normal;
-    font-size: 22px;
-    line-height: 120%;
-    text-align: center;
-    vertical-align: top;
-    font-weight: 450;
-    margin: 20px 56px 0px 56px;
-    height: 78px;
-}
-
-.text_after_images_margins {
-    font-family: 'SF Pro Display', sans-serif;
-    font-style: normal;
-    font-size: 22px;
-    line-height: 26px;
-    text-align: center;
-    vertical-align: top;
-    font-weight: 450;
-    height: 104px;
-    margin: 20px 46px 0px 46px;
-}
-
-.standart_height78 {
-    height: 78px;
-}
-
-.hello_world {
-    height: 52px;
-}
-
-.modern {
-
-    height: 104px;
-}
-
-.black_square {
-    background-color: #000000;
-    color: #FFFFFF;
-    height: 456px;
     margin-top: 87px;
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: relative;
+    overflow: hidden;
 }
 
 .square_first_text {
-    font-family: 'SF Pro Display', sans-serif;
-    width: 1024px;
-    display: flex;
-    justify-content: space-between;
     position: absolute;
-    margin: 22px 0px 0px 0px;
-    gap: 13px;
-    font-size: 21px;
     white-space: nowrap;
-    line-height: 28px;
-    transform: translateX(-30%);
-
+    display: flex;
+    gap: 19px;
+    left: 50%;
+    transform: translateX(-40.5%);
+    padding-top: 22px;
 }
 
-.bold_text_center {
+.bold_text {
     font-weight: bold;
-    text-align: center;
 }
 
-.text_сenter {
-    text-align: center;
+.scroll_text {
+    font-family: 'SF Pro Display', sans-serif;
+    font-size: 21px;
+    line-height: 28px;
 }
-
-
-
 
 .bottom_rose {
-    margin: 153px 65px 0px 65px;
-    margin-top: 153px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-
+    padding-top: 153px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .lorem {
+    padding: 26px 44px 0px 44px;
     font-family: 'New York Small';
-    font-style: normal;
+    font-weight: 400;
     font-size: 13px;
     line-height: 140%;
-    margin: 26px 44px 0px 44px;
-
 }
 
 .links {
+    list-style-type: none;
     display: flex;
-    justify-content: space-between;
-    width: 181px;
-    margin: 32px 97px 0px 97px;
+    justify-content: center;
+    gap: 28px;
 }
 
-.one_link {
-    font-family: 'SF Pro Display', sans-serif;
-    font-style: normal;
+.links_div {
+    padding-top: 32px;
+}
+
+.link {
+    font-family: 'SF Pro Text';
     font-weight: 500;
     font-size: 13px;
     line-height: 170%;
-    text-decoration-line: underline;
+    color: white;
 }
 
-.authors {
-    width: 170px;
-    height: 34px;
-    font-family: 'SF Pro Display', sans-serif;
-    font-style: normal;
+.copy_text {
+    font-family: 'SF Pro Text';
     font-weight: 500;
     font-size: 12px;
     line-height: 140%;
-    text-align: center;
-    margin: 64px 100px 32px 100px;
-}
-
-@media (min-width:640px) {
-    .flex_columns {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        padding-top: 39px;
-        align-content: center;
-        height: 1014px;
-        gap: 28px;
-
-    }
-
-    .square_first_text {
-        transform: translateX(0%);
-    }
-
-    .line_of_first_page {
-        width: 640px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 34px;
-    }
-
-    .attribute {
-        flex: 1;
-        width: 304px;
-        height: 338px;
-
-    }
-
-    .second_page_photos_first,
-    .second_page_photos {
-        margin: 0px 0px 0px 0px;
-    }
-
-    .text_after_images,
-    .text_after_images_78 {
-        margin-left: 21px;
-        margin-right: 21px;
-    }
-}
-
-@media (min-width: 1440px) {
-    .top {
-        height: 134px;
-        display: flex;
-    }
-
-    .whole_burger {
-        display: none;
-    }
-
-
-    .rose {
-        margin: 52.54px 0px 42.93px 63.58px;
-    }
-
-    .desktop_menu {
-        display: flex;
-    }
-
-    .first_part {
-        font-family: 'New York Small';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 170%;
-        letter-spacing: 0.12em;
-        margin: 52.54px 31px 40px 476.59px;
-    }
-
-    .second_part {
-        font-family: 'New York Small';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 170%;
-        letter-spacing: 0.12em;
-        margin: 52.54px 34px 40px 0px;
-    }
-
-    .third_part {
-        font-family: 'New York Small';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 170%;
-        letter-spacing: 0.12em;
-        margin: 52.54px 30px 40px 0px;
-    }
-
-    .fouth_part {
-        font-family: 'New York Small';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 170%;
-        letter-spacing: 0.12em;
-        margin: 52.54px 55px 40px 0px;
-    }
-
-    .top_photo {
-        width: 854px;
-        height: 533px;
-        margin: 76px 293px 0px 293px;
-    }
-
-    .aboutBlog {
-        font-size: 54px;
-        height: 162px;
-        margin: 44px 289px 0px 293px;
-    }
-
-    .smallTextAboutBlog {
-        font-size: 20px;
-        line-height: 170%;
-        margin: 32px 424px 0px 424px;
-    }
-
-
-
-    .articles {
-        font-size: 44px;
-        margin-top: 64px;
-    }
-
-
+    padding: 64px 98px 32px 98px;
 }
