first desktop commit

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,10 @@ select {
     }
 }
 
+.desktop_menu {
+    display: none;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -99,15 +103,6 @@ select {
     flex-direction: column;
     align-items: center;
     position: relative;
-}
-
-.top_section::after {
-    content: "";
-    padding-top: 52px;
-    max-width: 640px;
-    height: 0px;
-    width: 100%;
-    border-bottom: 2px solid black;
 }
 
 .about_blog {
@@ -137,11 +132,23 @@ select {
 }
 
 .section_with_photo {
+    margin-top: 52px;
+    margin-left: auto;
+    margin-right: auto;
+    border-top: 2px solid black;
+    max-width: 640px;
     text-align: center;
     padding-top: 56px;
+    position: relative;
+}
+
+.div_with_photo {
+    max-width: 304px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .text_after_images {
@@ -149,7 +156,7 @@ select {
     font-weight: 500;
     font-size: 22px;
     line-height: 120%;
-    padding: 20px 56px 0px 56px;
+    padding: 20px 11px 0px 11px;
 }
 
 .second_page_photos {
@@ -165,6 +172,7 @@ select {
     font-size: 32px;
     line-height: 38px;
     margin-bottom: -13px;
+
 }
 
 .footer_black_square {
@@ -177,6 +185,7 @@ select {
     align-items: center;
     position: relative;
     overflow: hidden;
+
 }
 
 .square_first_text {
@@ -195,8 +204,9 @@ select {
 
 .scroll_text {
     font-family: 'SF Pro Display', sans-serif;
-    font-size: 21px;
+    font-size: 20px;
     line-height: 28px;
+
 }
 
 .bottom_rose {
@@ -207,10 +217,12 @@ select {
 
 .lorem {
     padding: 26px 44px 0px 44px;
+    padding-top: 26px;
     font-family: 'New York Small';
     font-weight: 400;
     font-size: 13px;
     line-height: 140%;
+    max-width: 375px;
 }
 
 .links {
@@ -238,4 +250,96 @@ select {
     font-size: 12px;
     line-height: 140%;
     padding: 64px 98px 32px 98px;
+    max-width: 374px;
+}
+
+@media (min-width:855px) {
+    .about_blog {
+        max-width: 854px;
+        font-size: 54px
+    }
+
+    .articles {
+        font-size: 44px;
+        padding-bottom: 39px;
+    }
+
+    .small_text_about_blog {
+        font-size: 20px;
+        max-width: 550px;
+    }
+
+    .div_with_photo {
+        max-width: 640px;
+        flex-wrap: wrap;
+        height: 920px;
+        gap: 32px;
+        justify-content: space-between;
+
+    }
+
+    .attribute {
+        flex: 1;
+        max-width: 304px;
+        position: relative;
+        height: 338px;
+    }
+
+    .second_page_photos {
+        margin: 0px 0px 0px 0px;
+    }
+
+    .text_after_images {
+        padding: 20px 0px 0px 0px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 282px;
+    }
+
+    .square_first_text {
+        left: 50%;
+        transform: translateX(-50.0%);
+    }
+
+    .scroll_text {
+        font-size: 22px;
+        letter-spacing: 0.1em;
+    }
+
+    .lorem {
+        font-size: 16px;
+        max-width: 482px;
+
+    }
+
+    .link {
+        font-size: 16px;
+    }
+}
+
+@media (min-width:1024px) {
+    .desktop_menu {
+        display: flex;
+        gap: 32px;
+        font-family: 'New York Small';
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 170%;
+        letter-spacing: 0.12em;
+        text-transform: uppercase;
+        padding: 59px 61px 0px 0px;
+    }
+
+    .first_part {
+        border-bottom: 2px solid #000000;
+        padding-bottom: 40px;
+    }
+
+    .top_padding_burger {
+        display: none;
+    }
+
+    .top_padding_nordic {
+        padding: 52px 0px 0px 63px;
+    }
 }
