--- a/styles2.css
+++ b/styles2.css
@@ -1,5 +1,4 @@
-/* Указываем box sizing */
-*,
+Указываем box sizing *,
 *::before,
 *::after {
     box-sizing: border-box;
@@ -25,7 +24,8 @@ figure,
 figcaption,
 blockquote,
 dl,
-dd {
+dd,
+input {
     margin: 0;
 }
 
@@ -81,6 +81,10 @@ select {
     display: none;
 }
 
+.top_photo {
+    padding-top: 36px;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -110,7 +114,7 @@ select {
     font-size: 34px;
     font-weight: 700;
     line-height: 120%;
-    padding: 32px 20px 0px 20px;
+    padding: 0px 20px 0px 20px;
     margin-right: auto;
     margin-left: auto;
     max-width: 375px;
@@ -131,15 +135,205 @@ select {
     max-width: 375px;
 }
 
-.section_with_photo {
-    margin-top: 52px;
+.second_section {
+    display: block;
+    margin-top: 24px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-left: auto;
     margin-right: auto;
-    border-top: 2px solid black;
     max-width: 640px;
+}
+
+.author_of_post_info {
+    display: flex;
+    padding-top: 24px;
+    border-top: 2px solid #000000;
+    flex-wrap: wrap;
+}
+
+.author_name {
+    font-family: 'SF Pro Display', sans-serif;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 16px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+}
+
+.author_date {
+    font-family: 'SF Pro Display', sans-serif;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 16px;
+}
+
+
+.text_about_author {
+    padding-left: 16px;
+}
+
+.table_div {
+    padding-top: 24px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.table_of_contact {
+    display: flex;
+    width: 100%;
+    border: 1px solid #EAEAEA;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.08);
+    border-radius: 4px;
+    justify-content: space-between;
+}
+
+.facebook {
+    padding: 17px 43px 17px 43px;
+}
+
+.twitter {
+    padding: 17px 43px 17px 43px;
+    border-right: 1px solid #EAEAEA;
+    border-left: 1px solid #EAEAEA;
+}
+
+.phone {
+    padding: 17px 43px 17px 43px;
+}
+
+.author_comment {
+    padding-top: 32px;
+
+}
+
+.text_of_section {
+    font-family: 'New York Medium';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 170%;
+}
+
+.pipeline {
+    padding-top: 42px;
+    font-family: 'SF Pro Display';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+}
+
+.text_after_pipeline {
+    padding-top: 19px;
+
+}
+
+.rectangle {
+    padding-top: 42px;
+    position: absolute;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    left: 50%;
+    transform: translateX(-50.0%);
+    width: 375px;
+}
+
+.rectangle_caption {
+    font-family: 'SF Pro Display';
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 140%;
     text-align: center;
-    padding-top: 56px;
+    padding: 12px 20px 0px 20px;
+}
+
+.last_section_text {
+    padding-top: 382px;
+}
+
+.last_text_second {
+    padding-top: 35px;
+}
+
+.article_section_footer {
+    padding-top: 42px;
+    border-bottom: 1px dashed #000000;
+}
+
+.section_footer_text {
+    font-family: 'SF Pro Display', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.03em;
+}
+
+.table_div_footer {
+    padding-top: 9px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 335px;
+}
+
+.tags {
+    padding-top: 24px;
+    padding-bottom: 25px;
+}
+
+.black_link {
+    color: #000000;
+}
+
+.comment_from_author {
+    padding-top: 28px;
+}
+
+.big_avatar {
+    float: left;
+    padding-right: 15px;
+    padding-bottom: 15px;
+}
+
+.big_avatar_text_bold {
+    font-family: 'SF Pro Text';
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 160%;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+}
+
+.big_avatar_text {
+    font-family: 'New York Small';
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 160%;
+}
+
+.additional_articles {
+    margin-top: 91px;
+    border-top: 2px solid #000000;
+    text-align: center;
     position: relative;
+}
+
+.read_next {
+    padding-top: 62px;
+    font-family: 'New York Extra Large';
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+}
+
+.additional_articles:before {
+    content: url("photos/eyes.png");
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: -30px;
 }
 
 .div_with_photo {
@@ -166,20 +360,71 @@ select {
     margin-top: 42px;
 }
 
-.articles {
+.sign_up {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 82px;
+    border: 2px solid #000000;
+    border-top: 10px solid #000000;
+    text-align: center;
+    max-width: 640px;
+}
+
+.sign_up_caption {
+    padding: 42px 65px 0px 65px;
     font-family: 'New York Extra Large';
     font-weight: 700;
-    font-size: 32px;
-    line-height: 38px;
-    margin-bottom: -13px;
+    font-size: 29px;
+    line-height: 100%;
+}
 
+.sign_up_text {
+    padding: 14px 37px 0px 37px;
+    font-family: 'SF Pro Display';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+}
+
+.mail {
+    padding: 33px 26px 38px 26px;
+
+}
+
+.mail_text {
+    background-color: #000000;
+    color: white;
+    padding: 16px 17px 17px 17px;
+    white-space: nowrap;
+    font-family: 'SF Pro Display';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    border: 0;
+}
+
+.input_mail {
+    height: 48px;
+    border: 1px solid #000000;
+}
+
+::placeholder {
+    color: #000000;
+    padding-left: 12px;
+    font-family: 'SF Pro Display';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
 }
 
 .footer_black_square {
     background: black;
     color: white;
     text-align: center;
-    margin-top: 87px;
+    margin-top: 52px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -237,7 +482,7 @@ select {
 }
 
 .link {
-    font-family: 'SF Pro Display', sans-serif;                                    
+    font-family: 'SF Pro Display', sans-serif;
     font-weight: 500;
     font-size: 13px;
     line-height: 170%;
@@ -245,7 +490,7 @@ select {
 }
 
 .copy_text {
-    font-family: 'SF Pro Display', sans-serif; 
+    font-family: 'SF Pro Display', sans-serif;
     font-weight: 500;
     font-size: 12px;
     line-height: 140%;
@@ -259,62 +504,13 @@ select {
         font-size: 54px
     }
 
-    .articles {
-        font-size: 44px;
-        padding-bottom: 39px;
-    }
 
     .small_text_about_blog {
         font-size: 20px;
         max-width: 550px;
     }
 
-    .div_with_photo {
-        max-width: 640px;
-        flex-wrap: wrap;
-        height: 920px;
-        gap: 32px;
-        justify-content: space-between;
 
-    }
-
-    .attribute {
-        flex: 1;
-        max-width: 304px;
-        position: relative;
-        height: 338px;
-    }
-
-    .second_page_photos {
-        margin: 0px 0px 0px 0px;
-    }
-
-    .text_after_images {
-        padding: 20px 0px 0px 0px;
-        margin-left: auto;
-        margin-right: auto;
-        width: 282px;
-    }
-
-    .square_first_text {
-        left: 50%;
-        transform: translateX(-50.0%);
-    }
-
-    .scroll_text {
-        font-size: 22px;
-        letter-spacing: 0.1em;
-    }
-
-    .lorem {
-        font-size: 16px;
-        max-width: 482px;
-
-    }
-
-    .link {
-        font-size: 16px;
-    }
 }
 
 @media (min-width:1024px) {
