--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,6 @@ select {
 
 .top_padding_burger {
     padding: 24px 24px;
-
 }
 
 .top_section {
@@ -142,7 +141,7 @@ select {
     position: relative;
 }
 
-.div_with_photo {
+.photo {
     max-width: 304px;
     display: flex;
     flex-direction: column;
@@ -185,7 +184,6 @@ select {
     align-items: center;
     position: relative;
     overflow: hidden;
-
 }
 
 .square_first_text {
@@ -237,7 +235,7 @@ select {
 }
 
 .link {
-    font-family: 'SF Pro Display', sans-serif;                                    
+    font-family: 'SF Pro Display', sans-serif;
     font-weight: 500;
     font-size: 13px;
     line-height: 170%;
@@ -245,7 +243,7 @@ select {
 }
 
 .copy_text {
-    font-family: 'SF Pro Display', sans-serif; 
+    font-family: 'SF Pro Display', sans-serif;
     font-weight: 500;
     font-size: 12px;
     line-height: 140%;
@@ -269,19 +267,17 @@ select {
         max-width: 550px;
     }
 
-    .div_with_photo {
+    .photo {
         max-width: 640px;
         flex-wrap: wrap;
         height: 920px;
         gap: 32px;
         justify-content: space-between;
-
     }
 
     .attribute {
         flex: 1;
         max-width: 304px;
-        position: relative;
         height: 338px;
     }
 
@@ -309,7 +305,6 @@ select {
     .lorem {
         font-size: 16px;
         max-width: 482px;
-
     }
 
     .link {
@@ -331,8 +326,17 @@ select {
     }
 
     .first_part {
+        color: #000000;
         border-bottom: 2px solid #000000;
         padding-bottom: 40px;
+        text-decoration: none;
+    }
+
+    .second_part,
+    .third_part,
+    .fouth_part {
+        color: #000000;
+        text-decoration: none;
     }
 
     .top_padding_burger {
