fixed version of mobile

--- a/post.css
+++ b/post.css
@@ -1,16 +1,14 @@
-Указываем box sizing *,
+ *,
 *::before,
 *::after {
     box-sizing: border-box;
 }
 
-/* Убираем внутренние отступы */
 ul[class],
 ol[class] {
     padding: 0;
 }
 
-/* Убираем внешние отступы */
 body,
 h1,
 h2,
@@ -29,7 +27,6 @@ input {
     margin: 0;
 }
 
-/* Выставляем основные настройки по-умолчанию для body */
 body {
     min-height: 100vh;
     scroll-behavior: smooth;
@@ -37,29 +34,25 @@ body {
     line-height: 1.5;
 }
 
-/* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
 ul[class],
 ol[class] {
     list-style: none;
 }
 
-/* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
+
 a:not([class]) {
     text-decoration-skip-ink: auto;
 }
 
-/* Упрощаем работу с изображениями */
 img {
     max-width: 100%;
     display: block;
 }
 
-/* Указываем понятную периодичность в потоке данных у article*/
 article>*+* {
     margin-top: 1em;
 }
 
-/* Наследуем шрифты для инпутов и кнопок */
 input,
 button,
 textarea,
@@ -67,7 +60,6 @@ select {
     font: inherit;
 }
 
-/* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
 @media (prefers-reduced-motion: reduce) {
     * {
         animation-duration: 0.01ms !important;
@@ -77,7 +69,11 @@ select {
     }
 }
 
-.desktop_menu {
+.desktop_menu,
+.list,
+.text_after_list,
+.end,
+.share_on {
     display: none;
 }
 
@@ -102,7 +98,6 @@ select {
 
 .top_section {
     text-align: center;
-    padding-top: 52px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -118,10 +113,8 @@ select {
     margin-right: auto;
     margin-left: auto;
     max-width: 375px;
+    padding-top: 52px;
 }
-
-
-
 
 .small_text_about_blog {
     padding: 24px 20px 0px 20px;
@@ -136,7 +129,6 @@ select {
 }
 
 .second_section {
-    display: block;
     margin-top: 24px;
     padding-left: 20px;
     padding-right: 20px;
@@ -161,13 +153,13 @@ select {
     text-transform: uppercase;
 }
 
-.author_date {
+.time {
     font-family: 'SF Pro Display', sans-serif;
     font-weight: 400;
     font-size: 13px;
     line-height: 16px;
+    padding-top: 8px;
 }
-
 
 .text_about_author {
     padding-left: 16px;
@@ -175,13 +167,12 @@ select {
 
 .table_with_photo {
     padding-top: 24px;
-    display: block;
     margin-left: auto;
     margin-right: auto;
-
 }
 
-.table_of_contact {
+.table_of_contact,
+.table_of_contact2 {
     display: flex;
     width: 100%;
     border: 1px solid #EAEAEA;
@@ -190,11 +181,13 @@ select {
     justify-content: space-between;
 }
 
-.facebook {
+.facebook,
+.facebook2 {
     padding: 17px 43px 17px 43px;
 }
 
-.twitter {
+.twitter,
+.twitter2 {
     padding: 17px 43px 17px 43px;
     border-right: 1px solid #EAEAEA;
     border-left: 1px solid #EAEAEA;
@@ -206,7 +199,6 @@ select {
 
 .author_comment {
     padding-top: 32px;
-
 }
 
 .text_of_section {
@@ -226,13 +218,11 @@ select {
 
 .text_after_pipeline {
     padding-top: 19px;
-
 }
 
 .rectangle {
     padding-top: 42px;
     position: absolute;
-    display: block;
     margin-right: auto;
     margin-left: auto;
     left: 50%;
@@ -246,6 +236,8 @@ select {
     font-size: 13px;
     line-height: 140%;
     text-align: center;
+    margin-right: auto;
+    margin-left: auto;
     padding: 12px 20px 0px 20px;
 }
 
@@ -261,7 +253,7 @@ select {
     padding-top: 42px;
     border-bottom: 1px dashed #000000;
 }
- 
+
 .section_footer_text {
     font-family: 'SF Pro Display', sans-serif;
     font-weight: 500;
@@ -272,7 +264,6 @@ select {
 
 .table_footer {
     padding-top: 9px;
-    display: block;
     margin-left: auto;
     margin-right: auto;
     max-width: 335px;
@@ -354,14 +345,12 @@ select {
 }
 
 .second_page_photos {
-    display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 42px;
 }
 
 .sign_up {
-    display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 82px;
@@ -495,53 +484,9 @@ select {
     max-width: 374px;
 }
 
-@media (min-width:855px) {
-    .about_blog {
-        max-width: 854px;
-        font-size: 54px
-    }
-
-
-    .small_text_about_blog {
-        font-size: 20px;
-        max-width: 550px;
-    }
-
-
+.inf_about_author {
+    display: flex;
 }
 
-@media (min-width:1024px) {
-    .desktop_menu {
-        display: flex;
-        gap: 32px;
-        font-family: 'New York Small';
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 170%;
-        letter-spacing: 0.12em;
-        text-transform: uppercase;
-        padding: 59px 61px 0px 0px;
-    }
 
-    .first_part {
-        border-bottom: 2px solid #000000;
-        padding-bottom: 40px;
-        color: #000000;
-        text-decoration: none;
-    }
 
-    .top_padding_burger {
-        display: none;
-    }
-
-    .second_part,
-    .third_part,
-    .fouth_part {
-        color: #000000;
-        text-decoration: none;
-    }
-
-    .top_padding_nordic {
-        padding: 52px 0px 0px 63px;
-    }
-}
