--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ a:not([class]) {
 /* Упрощаем работу с изображениями */
 img {
     max-width: 100%;
-    display: block; 
+    display: block;
 }
 
 /* Указываем понятную периодичность в потоке данных у article*/
@@ -93,7 +93,6 @@ select {
 
 .top_padding_burger {
     padding: 24px 24px;
-
 }
 
 .top_section {
@@ -142,7 +141,7 @@ select {
     position: relative;
 }
 
-.div_with_photo {
+.photo {
     max-width: 304px;
     display: flex;
     flex-direction: column;
@@ -172,7 +171,6 @@ select {
     font-size: 32px;
     line-height: 38px;
     margin-bottom: -13px;
-
 }
 
 .footer_black_square {
@@ -185,7 +183,6 @@ select {
     align-items: center;
     position: relative;
     overflow: hidden;
-
 }
 
 .square_first_text {
@@ -206,7 +203,6 @@ select {
     font-family: 'SF Pro Display', sans-serif;
     font-size: 20px;
     line-height: 28px;
-
 }
 
 .bottom_rose {
@@ -232,7 +228,7 @@ select {
     gap: 28px;
 }
 
-.links_div {
+.links_padding {
     padding-top: 32px;
 }
 
@@ -269,7 +265,7 @@ select {
         max-width: 550px;
     }
 
-    .div_with_photo {
+    .photo {
         max-width: 640px;
         flex-wrap: wrap;
         height: 920px;
@@ -309,7 +305,6 @@ select {
     .lorem {
         font-size: 16px;
         max-width: 482px;
-
     }
 
     .link {
@@ -333,6 +328,15 @@ select {
     .first_part {
         border-bottom: 2px solid #000000;
         padding-bottom: 40px;
+        color: #000000;
+        text-decoration: none
+    }
+
+    .second_part,
+    .third_part,
+    .fouth_part {
+        color: #000000;
+        text-decoration: none
     }
 
     .top_padding_burger {
