--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,14 @@
-/* Указываем box sizing */
 *,
 *::before,
 *::after {
     box-sizing: border-box;
 }
 
-/* Убираем внутренние отступы */
 ul[class],
 ol[class] {
     padding: 0;
 }
 
-/* Убираем внешние отступы */
 body,
 h1,
 h2,
@@ -25,11 +22,11 @@ figure,
 figcaption,
 blockquote,
 dl,
-dd {
+dd,
+input {
     margin: 0;
 }
 
-/* Выставляем основные настройки по-умолчанию для body */
 body {
     min-height: 100vh;
     scroll-behavior: smooth;
@@ -37,29 +34,25 @@ body {
     line-height: 1.5;
 }
 
-/* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
 ul[class],
 ol[class] {
     list-style: none;
 }
 
-/* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
+
 a:not([class]) {
     text-decoration-skip-ink: auto;
 }
 
-/* Упрощаем работу с изображениями */
 img {
     max-width: 100%;
     display: block;
 }
 
-/* Указываем понятную периодичность в потоке данных у article*/
 article>*+* {
     margin-top: 1em;
 }
 
-/* Наследуем шрифты для инпутов и кнопок */
 input,
 button,
 textarea,
@@ -67,7 +60,6 @@ select {
     font: inherit;
 }
 
-/* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
 @media (prefers-reduced-motion: reduce) {
     * {
         animation-duration: 0.01ms !important;
@@ -114,9 +106,6 @@ select {
     margin-left: auto;
     max-width: 375px;
 }
-
-
-
 
 .small_text_about_blog {
     padding: 24px 20px 0px 20px;
@@ -271,7 +260,6 @@ select {
         height: 920px;
         gap: 32px;
         justify-content: space-between;
-
     }
 
     .attribute {
