--- a/post.css
+++ b/post.css
@@ -130,15 +130,17 @@ select {
 
 .second_section {
     margin-top: 24px;
-   
+
 }
-.second_section_block{
-     padding-left: 20px;
+
+.second_section_block {
+    padding-left: 20px;
     padding-right: 20px;
     margin-left: auto;
     margin-right: auto;
     max-width: 640px;
 }
+
 .author_of_post_info {
     display: flex;
     padding-top: 24px;
@@ -383,7 +385,7 @@ select {
 .mail_text {
     background-color: #000000;
     color: white;
-    padding: 17px 17px 17px 17px;
+    padding: 17px;
     white-space: nowrap;
     font-family: 'SF Pro Display';
     font-weight: 700;
@@ -642,7 +644,6 @@ select {
     .big_avatar {
         padding-top: 4px;
         padding-right: 24px;
-
     }
 
     .big_avatar_text {
@@ -718,7 +719,7 @@ select {
         font-weight: 500;
         font-size: 20px;
         line-height: 170%;
-        letter-spacing: 0.12em;
+        letter-spacing: 1.92px;
         text-transform: uppercase;
         padding: 59px 61px 0px 0px;
     }
